# OpenCL_SumReduction

./: .gitignore  CMakeLists.txt  main.cpp  sum.cl
src/: CMakeLists.txt  main.cpp  main.h
