set(CMAKE_INSTALL_PREFIX $ENV{HOME})

cmake_minimum_required (VERSION 3.8)

project ("OpenCL_Sum_Reduction_Example" LANGUAGES CXX)
# OPENCL

FIND_PACKAGE(OpenCL REQUIRED)

set(LIB_INCLUDE ${CMAKE_CURRENT_SOURCE_DIR}/lib CACHE STRING "")

INCLUDE_DIRECTORIES(${OPENCL_HPP_PATH})
INCLUDE_DIRECTORIES(${OpenCL_INCLUDE_DIRS}) 

LINK_DIRECTORIES(${OpenCL_LIBRARY})

# src
add_subdirectory(src)